added eb package configuration

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ __pycache__
 uwsgi_params
 *sql*
 local_settings.py
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
