--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -2,5 +2,6 @@ packages:
   yum:
     libjpeg-turbo-devel: []
     libpng-devel: []
+    freetype-devel: []
     git: []
     postgresql94-devel: []
