[enh] add new domain

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -5,4 +5,20 @@ packages:
     freetype-devel: []
     git: []
     postgresql94-devel: []
-    pdftex: []
+    texlive: []
+    texlive-texlive: []
+    texlive-latex: []
+    texlive-tetex: []
+    texlive-pdftex: []
+    texlive-babel: []
+    texlive-fontspec: []
+    texlive-latex-bin: []
+    texlive-latex-fonts: []
+    texlive-amsmath: []
+    texlive-lualatex-math: []
+    texlive-mathpazo: []
+    texlive-mathspec: []
+    texlive-pxfonts: []
+    texlive-textcase: []
+    texlive-txfonts: []
+    texlive-unicode-math: []
