--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,8 +1,14 @@
 container_commands:
-  01_migrate:
+  00_create_dir:
+    command: mkdir -p /var/log/app-logs
+  01_change_permissions:
+    command: chmod g+s /var/log/app-logs
+  02_change_owner:
+    command: chown wsgi:wsgi /var/log/app-logs  
+  03_migrate:
     command: "source /opt/python/run/venv/bin/activate && python bac_carte/manage.py migrate --noinput"
     leader_only: true
-  02_collectstatic:
+  04_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python bac_carte/manage.py collectstatic --noinput"
 option_settings:
   "aws:elasticbeanstalk:application:environment":
