change some flag

--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -3,12 +3,14 @@ container_commands:
     command: mkdir -p /var/log/app-logs
   01_change_permissions:
     command: chmod g+s /var/log/app-logs
-  02_change_owner:
+  02_change_flag:
+    command: setfacl -d -m g::rw /var/log/app-logs/
+  03_change_owner:
     command: chown wsgi:wsgi /var/log/app-logs  
-  03_migrate:
+  04_migrate:
     command: "source /opt/python/run/venv/bin/activate && python bac_carte/manage.py migrate --noinput"
     leader_only: true
-  04_collectstatic:
+  05_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python bac_carte/manage.py collectstatic --noinput"
 option_settings:
   "aws:elasticbeanstalk:application:environment":
